--- a/20191210/index.html
+++ b/20191210/index.html
@@ -6,7 +6,8 @@
     <title>20191210</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">aa</div>
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
