--- a/20191210/index.html
+++ b/20191210/index.html
@@ -6,7 +6,7 @@
     <title>20191210</title>
   </head>
   <body>
-    
+    <div class="" id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
